log
Fri Apr 22 15:22:26 UTC 2022: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:23: error: ‘lt’ undeclared (first use in this function)
     map->lower_than = lt
                       ^~
treemap.c:41:23: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:42:5: error: expected ‘;’ before ‘return’
     return TreeMap;
     ^~~~~~
treemap.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
8f3d4a3
Fri Apr 22 15:22:43 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:12: error: expected expression before ‘TreeMap’
     return TreeMap;
            ^~~~~~~
treemap.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
a898d34
Fri Apr 22 15:22:55 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
d974c5e
Fri Apr 22 15:24:57 UTC 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
6df0209
